# your_project/docs/swagger.yaml
@@ -648,6 +648,57 @@ definitions:
         description: Valid is true if Time is not NULL
         type: boolean
     type: object
+  tags.TagDetails:
+    description: TagDetails represents detailed information about a specific tag.
+    properties:
+      company_id:
+        description: Tag's company
+        type: string
+      created_at:
+        description: CreatedAt is the timestamp indicating when the tag was created.
+        type: string
+      id:
+        description: Unique identifier for the tag.
+        type: string
+      name:
+        description: Tag's  name.
+        type: string
+    type: object
+  tags.TagIn:
+    description: TagIn represents the input structure for creating a new tag.
+    properties:
+      name:
+        description: Tag's name.
+        type: string
+    type: object
+  tags.TagPagination:
+    description: TagPagination represents the paginated list of tags.
+    properties:
+      items:
+        description: Items is a slice containing individual tag details.
+        items:
+          $ref: '#/definitions/tags.TagTable'
+        type: array
+      limit:
+        description: Limit is the maximum number of items per page in the pagination.
+        type: integer
+      page:
+        description: Page is the current page number in the pagination.
+        type: integer
+      totalCount:
+        description: TotalCount is the total number of tags in the entire list.
+        type: integer
+    type: object
+  tags.TagTable:
+    description: TagTable represents a single tag entry in a table.
+    properties:
+      id:
+        description: Unique identifier for the tag.
+        type: string
+      name:
+        description: Tag's full name.
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -657,6 +708,36 @@ info:
   title: Project Name
   version: "0.1"
 paths:
+  /Tags:
+    post:
+      parameters:
+      - description: Tag query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/tags.TagIn'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
   /auth/signin:
     post:
       consumes:
@@ -1708,6 +1789,129 @@ paths:
       summary: Get list of  roles
       tags:
       - Roles
+  /tags:
+    get:
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/tags.TagPagination'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+  /tags/{ID}:
+    delete:
+      parameters:
+      - description: Tag ID
+        in: path
+        name: ID
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+    get:
+      parameters:
+      - description: Tag ID
+        in: path
+        name: ID
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/tags.TagDetails'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+    put:
+      parameters:
+      - description: Tag ID
+        in: path
+        name: ID
+        required: true
+        type: string
+      - description: Tag query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/tags.TagIn'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
   /users/{companyID}:
     get:
       description: Get all users.
